--- a/mystyle.css
+++ b/mystyle.css
@@ -10,3 +10,15 @@ body {
   <body background="backgroundone.jpg">
   
 }
+.button {
+  background-color: #04AA6D;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
