--- a/mystyle.css
+++ b/mystyle.css
@@ -26,3 +26,8 @@ body {
   color: purple;
   font: "Times New Roman";
 }
+.copyright {
+  color: #2E9ADA;
+  font-size: 12px;
+  font: "Times New Roman";
+}
